--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Casmart - Biggest shopping center</title>
+  <title>FASHION FORWARD - style meets comfort</title>
 
   <!-- 
     - favicon
@@ -53,7 +53,7 @@
         <button class="header-action-btn">
           <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
 
-          <p class="header-action-label">Sign in</p>
+          <p class="header-action-label">Login in</p>
         </button>
 
         <button class="header-action-btn">
@@ -73,7 +73,7 @@
         <button class="header-action-btn">
           <ion-icon name="heart-outline" aria-hidden="true"></ion-icon>
 
-          <p class="header-action-label">Wishlisht</p>
+          <p class="header-action-label">collections</p>
 
           <div class="btn-badge" aria-hidden="true">2</div>
         </button>
@@ -177,7 +177,7 @@
               <div class="service-content">
                 <p class="service-item-title">Free Shipping</p>
 
-                <p class="service-item-text">On All Order Over $599</p>
+                <p class="service-item-text">On All Order Over 599.rs</p>
               </div>
             </li>
 
@@ -241,7 +241,7 @@
                   class="w-100">
               </figure>
 
-              <a href="#" class="btn btn-secondary">Sunglass & Eye</a>
+              <a href="#" class="btn btn-secondary">Shirts</a>
             </li>
 
             <li class="category-item">
@@ -250,7 +250,7 @@
                   class="w-100">
               </figure>
 
-              <a href="#" class="btn btn-secondary">Active & Outdoor</a>
+              <a href="#" class="btn btn-secondary">T-Shirts</a>
             </li>
 
             <li class="category-item">
@@ -259,7 +259,7 @@
                   class="w-100">
               </figure>
 
-              <a href="#" class="btn btn-secondary">Winter Wear</a>
+              <a href="#" class="btn btn-secondary">Hoodies</a>
             </li>
 
             <li class="category-item">
@@ -268,7 +268,7 @@
                   height="600" class="w-100">
               </figure>
 
-              <a href="#" class="btn btn-secondary">Exclusive Footwear</a>
+              <a href="#" class="btn btn-secondary">Formals</a>
             </li>
 
             <li class="category-item">
@@ -277,7 +277,7 @@
                   class="w-100">
               </figure>
 
-              <a href="#" class="btn btn-secondary">Jewelry</a>
+              <a href="#" class="btn btn-secondary">Pants</a>
             </li>
 
             <li class="category-item">
@@ -286,7 +286,7 @@
                   class="w-100">
               </figure>
 
-              <a href="#" class="btn btn-secondary">Sports Cap</a>
+              <a href="#" class="btn btn-secondary">Accessories</a>
             </li>
 
           </ul>
@@ -496,7 +496,7 @@
 
                 <div class="card-content">
                   <h3 class="h4 card-title">
-                    <a href="#">Women's Faux-Trim Shirt</a>
+                    <a href="#">Vintage Shirts</a>
                   </h3>
 
                   <div class="card-price">
@@ -539,7 +539,7 @@
 
                 <div class="card-content">
                   <h3 class="h4 card-title">
-                    <a href="#">Soft Touch Interlock Polo</a>
+                    <a href="#">Polo T-shirts</a>
                   </h3>
 
                   <div class="card-price">
@@ -582,7 +582,7 @@
 
                 <div class="card-content">
                   <h3 class="h4 card-title">
-                    <a href="#">Casmart Smart Watch</a>
+                    <a href="#">Fastrack Watches</a>
                   </h3>
 
                   <div class="card-price">
@@ -627,7 +627,7 @@
 
                 <div class="card-content">
                   <h3 class="h4 card-title">
-                    <a href="#">Casmart Smart Glass</a>
+                    <a href="#">Smart Glass</a>
                   </h3>
 
                   <div class="card-price">
@@ -717,7 +717,7 @@
 
                 <div class="card-content">
                   <h3 class="h4 card-title">
-                    <a href="#">Double-breasted Blazer</a>
+                    <a href="#">latest collections</a>
                   </h3>
 
                   <div class="card-price">
@@ -762,7 +762,7 @@
 
                 <div class="card-content">
                   <h3 class="h4 card-title">
-                    <a href="#">Ribbed Cotton Bodysuits</a>
+                    <a href="#">trendy suits</a>
                   </h3>
 
                   <div class="card-price">
@@ -826,7 +826,7 @@
                   </ul>
 
                   <h3 class="h3 card-title">
-                    <a href="#">Worthy Cyber Monday Fashion From Casmart</a>
+                    <a href="#">Worthy Cyber Monday Fashion From FASHION FORWARD</a>
                   </h3>
 
                 </div>
@@ -980,7 +980,7 @@
           </a>
 
           <p class="footer-text">
-            Casmart is a fashion theme for presents a complete wardrobe of uniquely crafted Ethnic Wear, Casuals, Edgy
+            FASHION FORWARD is a fashion theme for presents a complete wardrobe of uniquely crafted Ethnic Wear, Casuals, Edgy
             Denims, &
             Accessories inspired from the most contemporary
           </p>
@@ -1054,11 +1054,11 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Handbags & Wallets</a>
+            <a href="#" class="footer-link">Bags & Wallets</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Women's Clothing</a>
+            <a href="#" class="footer-link">Men's Clothing</a>
           </li>
 
           <li>
@@ -1070,11 +1070,11 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Baby Corner</a>
+            <a href="#" class="footer-link">Jeans Corner</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Man & Woman Shoe</a>
+            <a href="#" class="footer-link">Man Shoe</a>
           </li>
 
         </ul>
